publish: fix number being cut off at top
generated from commit 462b1b4d6f1ee130a184796074574757bb84d06e

--- a/tour.css
+++ b/tour.css
@@ -68,3 +68,8 @@
     border-top-right-radius: 0;
     border-bottom-right-radius: 0;
 }
+
+.introjs-helperLayer.top .introjs-helperNumberLayer {
+    top: initial;
+    bottom: -16px;
+}
